--- a/4/HW4.ipynb
+++ b/4/HW4.ipynb
@@ -1,1 +1,267 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "objective-equipment",
+   "metadata": {},
+   "source": [
+    "## SQLite и Pandas\n",
+    "\n",
+    "Сегодня мы поработаем над тем как извлекать данные из базы данных SQLite. Для начала импортируем нужные нам библиотечки."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "protective-clock",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "latest-surgery",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создаем коннектор к файлу нашей базы данных. \n",
+    "# Само собой, файлик Базы Данных должен лежать рядом с файлом блокнота (который вы сейчас читаете). \n",
+    "con = sqlite3.connect('DBname2.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "psychological-circuit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = con.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "regular-nutrition",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Маша', 5, '2020-01-01'),\n",
+       " ('Петя', 4, '2020-01-01'),\n",
+       " ('Вася', 3, '2020-01-01'),\n",
+       " ('Саша', 4, '2020-01-01'),\n",
+       " ('Маша', 4, '2020-01-02'),\n",
+       " ('Петя', 4, '2020-01-02'),\n",
+       " ('Вася', 4, '2020-01-02'),\n",
+       " ('Саша', 5, '2020-01-02'),\n",
+       " ('Маша', 5, '2020-01-03'),\n",
+       " ('Петя', 3, '2020-01-03'),\n",
+       " ('Вася', 2, '2020-01-03'),\n",
+       " ('Саша', 5, '2020-01-03'),\n",
+       " ('Маша', 3, '2020-01-04'),\n",
+       " ('Петя', 3, '2020-01-04'),\n",
+       " ('Вася', 3, '2020-01-04'),\n",
+       " ('Саша', 3, '2020-01-04'),\n",
+       " ('Максим', 2, '2020-01-04'),\n",
+       " ('Маша', 5, '2020-01-05'),\n",
+       " ('Маша', 3, '2020-01-05'),\n",
+       " ('Маша', 3, '2020-01-05'),\n",
+       " ('Маша', 3, '2020-01-05')]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute('SELECT * FROM EmplPoints').fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aboriginal-crack",
+   "metadata": {},
+   "source": [
+    "# Pandas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "academic-childhood",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Маша</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Петя</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Вася</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Саша</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Максим</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name\n",
+       "0    Маша\n",
+       "1    Петя\n",
+       "2    Вася\n",
+       "3    Саша\n",
+       "4  Максим"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df = pd.read_sql(\"\"\"\n",
+    "\n",
+    "    SELECT DISTINCT Name\n",
+    "FROM EmplPoints\n",
+    "\n",
+    "\"\"\", con)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4ae6477b-06a8-48a4-8832-53f8a35f0de0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>count(Point)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Маша</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Саша</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Name  count(Point)\n",
+       "0  Маша             3\n",
+       "1  Саша             2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.read_sql(\"\"\"\n",
+    "\n",
+    "    SELECT Name, count(Point)\n",
+    "FROM EmplPoints\n",
+    "WHERE Point=5\n",
+    "GROUP BY Name \n",
+    "ORDER BY 2 DESC\n",
+    "\n",
+    "\"\"\", con)\n",
+    "df1"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
